improved search functionality to browse page and fixed images being too big on browse page

--- a/browse.css
+++ b/browse.css
@@ -75,7 +75,7 @@ h2 {
 }
 
 #mainContainer img {
-	width: auto;
+	max-width: 150px;
     height: auto;
     display: block;
 }
